added media query

--- a/index.html
+++ b/index.html
@@ -11,18 +11,29 @@
     <title>AHGC Lab One</title>
 </head>
 <body>
-    <a>chirpus inc.</a>
+    <header>
+    <a id="headername">chirpus inc.</a>
+    <div id="desktop-header">
     <nav>
         <a>Work</a>
         <a>About us</a>
         <a>Contact</a>
     </nav>
     <button id="hire"> Hire Us </button>
-    <div>
+    </div>
+    </header>
+    <div id="desktopmain">
+    <div id="info">
     <h1>chirpus inc.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam at vel eligendi ea, laudantium, sit dicta laboriosam est corporis saepe optio ab officiis enim? Voluptatum quibusdam repellat quidem at et!</p>
-    </div>
     <button id="action"> Call To Action </button>
+</div>
+<div id=circles>
+<div id="circle1"></div>
+<div id="circle2"></div>
+<div id="circle3"></div>
+</div>
+</div>
 <footer>
     <ul>
         <li id="footername"> chirpus inc.</li>
